--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,17 @@
 // Specific CSS for your home-page
+h1 {
+  text-align: center;
+  color: white;
+  font-family: 'Comfortaa', cursive;
+  margin-top: 25px;
+}
+
+body {
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("https://images.unsplash.com/photo-1474465847590-4d2b58fe9afb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1389&q=80");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: auto;
+  font-family: 'Comfortaa', cursive;
+  font-weight: 600;
+  color: white;
+}
