--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <h1><%= @cocktail.name %></h1>
+  <h1><%= @cocktail.name %> / <%= link_to "Edit Puptail", edit_cocktail_path(@cocktail), class: "btn btn-outline-light" %></h1>
 
   <% @cocktail.doses.each do |dose| %>
-  <p><%= dose.ingredient.name %></p>
+  <p> <%= dose.description %> / <%= dose.ingredient.name %> / <%= link_to  "🗑 Remove", dose_path(dose), method: :delete, data: {confirm: "Are you sure?"}, style: "color: red"  %></p>
   <% end %>
   <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :description %>
   <%= f.association :ingredient %>
- <%= f.button :submit %>
+ <%= f.button :submit, class: "btn-outline-light" %>
 <% end %>
 </div>
