Add dotenv - Protect my secret data in .env file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,14 @@
 
 <body>
  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="<%= cocktails_path %>">Floof n' Snoot <i class="fas fa-paw"></i> </a>
+  <a class="navbar-brand" href="<%= root_path %>">Floof n' Snoot <i class="fas fa-paw"></i> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
 
-      <a class="nav-item nav-link active" href="<%= cocktails_path %>">All Puptails <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="<%= root_path %>">All Puptails <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="<%= new_cocktail_path %>">Add a Puptail</a>
     </div>
   </div>
