--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,7 +4,12 @@
 
     <% @cocktails.each do |cocktail| %>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="card-img-top" alt="...">
+      <% if cocktail.photo.attached? %>
+        <%= cl_image_tag cocktail.photo.key, width: 358, height: 358, crop: :thumb %>
+        <% else %>
+        <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="card-img-top" alt="...">
+      <% end %>
+
       <div class="card-body">
         <%= link_to cocktail.name, cocktail_path(cocktail), class: "btn btn-outline-secondary" %>
       </div>
