--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container-top">
   <h1><%= @cocktail.name %> / <%= link_to "Edit Puptail", edit_cocktail_path(@cocktail), class: "btn btn-outline-light" %></h1>
-<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+  <% if @cocktail.photo.attached? %>
+        <%= cl_image_tag @cocktail.photo.key, width: 358, height: 358, crop: :thumb %>
+        <% else %>
+        <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="card-img-top" alt="...">
+        <% end %>
 </div>
 <div class="container-bottom"></div>
   <% @cocktail.doses.each do |dose| %>
