fixed grid and other styling

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,3 +1,24 @@
 .container-top {
 text-align: center;
+justify-content: center;
+display: flex;
+}
+
+img {
+  width: 350px;
+  height: 300px;
+}
+
+.ingredients {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+h3 {
+  font-weight: 600;
+}
+
+.photo {
+  text-align: center;
+  margin-top: 30px;
 }
