--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,19 +1,24 @@
 <h1>Puptails</h1>
 
-  <div class="container cards-container">
+<div class="container py-5 cards-container ">
+  <div class=“row” style="display: flex; flex-wrap: wrap;">
 
     <% @cocktails.each do |cocktail| %>
-    <div class="card">
-      <% if cocktail.photo.attached? %>
-        <%= cl_image_tag cocktail.photo.key, width: 358, height: 358, crop: :thumb %>
-        <% else %>
-        <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="card-img-top" alt="...">
+      <div class="col-md-4 mb-3">
+        <%= link_to cocktail_path(cocktail) do %>
+          <% if cocktail.photo.attached? %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path cocktail.photo.key %>)"><%= cocktail.name %>
+
+
+            </div>
+          <% else %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80)">
+            <%= cocktail.name %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
       <% end %>
 
-      <div class="card-body">
-        <%= link_to cocktail.name, cocktail_path(cocktail), class: "btn btn-outline-secondary" %>
-      </div>
-    </div>
-
-    <% end %>
   </div>
+</div>
