--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,7 +1,7 @@
 .container-top {
 text-align: center;
 justify-content: center;
-display: flex;
+// display: flex;
 }
 
 img {
@@ -16,9 +16,30 @@ img {
 
 h3 {
   font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .photo {
   text-align: center;
   margin-top: 30px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+div.add_ingredient {
+  width: 300px;
+  form {
+    width: 300px;
+  }
+}
+
+div.ingredients {
+  // background-color: #343A40;
+  padding: 10px;
+  width: 350px;
+  min-height: 300px;
 }
