--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
   <h1>Add a Puptail</h1>
+  <div class="add_form">
   <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-secondary" %> <%= link_to "Nevermind, Go 🔙 to All Puptails", root_path %>
+  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-light" %>
   <% end %>
+  </div>
 
 </div>
