fixed picture dimensions

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -4,9 +4,9 @@ justify-content: center;
 // display: flex;
 }
 
-img {
+img.rounded {
   width: 350px;
-  height: 300px;
+  height: 350px;
 }
 
 .ingredients {
