--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,7 +7,7 @@
 <div class="content">
   <div class="photo">
     <% if @cocktail.photo.attached? %>
-      <%= cl_image_tag @cocktail.photo.key, width: 350, height: 350, crop: :fill %>
+      <%= cl_image_tag @cocktail.photo.key, width: 350, crop: :scale %>
     <% else %>
       <img src="https://images.unsplash.com/photo-1568688570940-831467d18af7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" class="rounded" alt="...">
     <% end %>
