--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <h1>Edit <%= @cocktail.name %></h1>
+<h1>Edit <%= @cocktail.name %></h1>
+<div class="edit-container">
   <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-secondary" %> <%= link_to "Nevermind, Go 🔙 to All Puptails", root_path %>
+  <%= f.submit "Finish! 👌🏽", class: "btn btn-outline-secondary" %>
   <% end %>
 
 </div>
